@@ -26,12 +26,12 @@ rock = "terr_dirt-grass.jpg"
 seabottom = "dark.png"
 
 [graphics]
-fresnelwater = false
-foliage = true
+fresnelwater = true
+foliage = false
 
 [foliage]
 submeshsize = 16
-spacing_grass = 3
+spacing_grass = 2
 spacing_bushes = 10
 cullingdistance = 32
 
@@ -39,7 +39,7 @@ cullingdistance = 32
 [terrain]
 detailtile = 4
 pagesource = EmberTerrain
-pagesize = "65"
+pagesize = 65
 tilesize = 33
 maxpixelerror = 5
 maxmipmaplevel = 5
@@ -50,6 +50,10 @@ vertexprogrammorph = false
 lodmorphstart = 0.2
 
 usedebuglodcolors = false
+
+[ingamechatwidget]
+timeshown = 30
+distanceshown = 100
 
 
 
